[gd_scene load_steps=10 format=3 uid="uid://c5fs8gn08j22s"]

[ext_resource type="Script" path="res://UI/MainMenu.gd" id="1_uu28l"]
[ext_resource type="PackedScene" uid="uid://cvw4ajho6rrms" path="res://UI/sky_background.tscn" id="2_0csxi"]
[ext_resource type="Texture2D" uid="uid://pa77bpkaarkn" path="res://UI/playbutton.png" id="3_8roxj"]
[ext_resource type="Texture2D" uid="uid://ddgtu5kyq16oa" path="res://UI/settingsbutton.png" id="4_apg8w"]
[ext_resource type="Texture2D" uid="uid://cm26q4q5ogdd7" path="res://UI/exitbutton.png" id="5_q6nuy"]
[ext_resource type="Texture2D" uid="uid://b7h5bf3e2bley" path="res://UI/titlenew.png" id="6_aqoow"]
[ext_resource type="AudioStream" uid="uid://blkkx4k20nvwj" path="res://Audio/selected.wav" id="7_ru36s"]
[ext_resource type="Script" path="res://components/variable_pitch_audio_stream_player.gd" id="8_07k1d"]
[ext_resource type="AudioStream" uid="uid://djqsor76gf0a7" path="res://Audio/mainmenumusic.mp3" id="9_d8wi6"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uu28l")
tween_intensity = 1.2
tween_duration = 0.3

[node name="SkyBackground" parent="." instance=ExtResource("2_0csxi")]

[node name="PlayButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 702.0
offset_right = 190.0
offset_bottom = 792.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("3_8roxj")

[node name="SettingsButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.056
anchor_bottom = 0.103
offset_left = 33.0
offset_top = 836.0
offset_right = 222.648
offset_bottom = 827.017
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("4_apg8w")

[node name="ExitButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 982.0
offset_right = 251.0
offset_bottom = 1072.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("5_q6nuy")

[node name="Title" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -8.99998
offset_top = 126.0
offset_right = 247.0
offset_bottom = 270.0
scale = Vector2(2.5, 2.5)
texture = ExtResource("6_aqoow")

[node name="VariablePitchAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ru36s")
bus = &"SFX"
script = ExtResource("8_07k1d")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_d8wi6")
bus = &"Music"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
